# wikisearch

./: .env.template  .gitignore  LICENSE  README.md  download_zim.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
resource/testresult/: 人工智能.html  人工智能.md
src/wikisearch/: api.py  config.py
src/wikisearch/server/: __main__.py  fastapiserver.py  mcpserver.py
src/wikisearch/tools/: convert_html.py  tools.py
src/wikisearch/zim/: zim_downloader.py  zim_searcher.py
test/: test_md.py  test_wiki_api.py  test_zim.py  test_zim_search.py  test_zim_search_html.py  test_zim_search_result.py
tests/: test_mcp_tool.py  test_wiki_api.py
